--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -1,7 +1,6 @@
 #Database for data
 db.data.driver=org.postgresql.Driver
-#db.data.url=jdbc:postgresql://crick:5432/np_20160120
-db.data.url=jdbc:postgresql://crick:5432/np_20150917
+db.data.url=jdbc:postgresql://crick:5432/np_20160120
 #db.data.url=jdbc:postgresql://crick:5432/np_20150906
 #db.data.url=jdbc:postgresql://kant:5432/nextprot
 #db.data.url=jdbc:postgresql://uat-web1:5432/np_annot_uat
@@ -42,8 +41,7 @@ sparql.url=http://kant:8890/sparql
 pepx.url=http://crick.isb-sib.ch/pepx/cgi-bin/pepx
 
 #SOLR database
-solr.url=http://kant:8983/solr
-#solr.url=http://crick:8985/solr
+solr.url=http://crick:8983/solr
 
 #Client id and secret for auth0
 auth0.clientId=CLIENT_ID_JUST_FOR_DEV
