--- a/tasks/pom.xml
+++ b/tasks/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-		<version>0.6.0-SNAPSHOT</version>
+		<version>0.6.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
