--- a/annotation-builder/pom.xml
+++ b/annotation-builder/pom.xml
@@ -3,12 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>nextprot-api-master</artifactId>
 		<groupId>org.nextprot</groupId>
-		<version>0.7.0-SNAPSHOT</version>
+		<artifactId>nextprot-api-master</artifactId>
+        <version>0.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+	<groupId>org.nextprot</groupId>
 	<artifactId>nextprot-annotation-builder</artifactId>
 	<packaging>jar</packaging>
 
