--- a/annotation-builder/pom.xml
+++ b/annotation-builder/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nextprot</groupId>
 		<artifactId>nextprot-api-master</artifactId>
-        <version>0.7.0-SNAPSHOT</version>
+		<version>0.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -30,15 +30,19 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.nextprot</groupId>
-			<artifactId>nextprot-api-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>com.oracle.jdbc</groupId>
 			<artifactId>ojdbc7</artifactId>
 			<version>12.1.0.2</version>
 		</dependency>
+		<!-- used for tests -->
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-commons</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
