--- a/web/pom.xml
+++ b/web/pom.xml
@@ -77,6 +77,19 @@
 			<artifactId>nextprot-annotation-builder</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.oracle.jdbc</groupId>
+			<artifactId>ojdbc7</artifactId>
+			<version>12.1.0.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.nextprot</groupId>
+		    <artifactId>nextprot-commons</artifactId>
+		    <version>0.9.0-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 
