--- a/core/pom.xml
+++ b/core/pom.xml
@@ -72,6 +72,12 @@
 						<version>1.2.16</version>
 					</dependency>
 
+					<dependency>
+						<groupId>org.nextprot</groupId>
+						<artifactId>nextprot-commons</artifactId>
+						<version>0.9.0-SNAPSHOT</version>
+					</dependency>
+
 				</dependencies>
 				<executions>
 					<execution>
