--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 				<artifactId>nextprot-api-commons</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+		    <dependency>
+			<groupId>org.nextprot</groupId>
+    			<artifactId>nextprot-commons</artifactId>
+			<version>0.9.0-SNAPSHOT</version>
+		    </dependency>
+	
 		</dependencies>
 
 	</dependencyManagement>
