--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -14,6 +15,13 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-commons</artifactId>
+			<version>0.9.0-SNAPSHOT</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-commons</artifactId>
@@ -50,18 +58,10 @@
 					</webAppConfig>
 					<stopKey>foo</stopKey>
 					<stopPort>9999</stopPort>
-					<!-- <systemproperties>
-						<systemproperty>
-							<name>org.apache.commons.logging.Log</name>
-							<value>
-								org.apache.commons.logging.impl.Log4JLogger
-							</value>
-						</systemproperty>
-						<systemproperty>
-							<name>log4j.configuration</name>
-							<value>file:./src/main/resources/log4j.xml</value>
-						</systemproperty>
-					</systemproperties>-->
+					<!-- <systemproperties> <systemproperty> <name>org.apache.commons.logging.Log</name> 
+						<value> org.apache.commons.logging.impl.Log4JLogger </value> </systemproperty> 
+						<systemproperty> <name>log4j.configuration</name> <value>file:./src/main/resources/log4j.xml</value> 
+						</systemproperty> </systemproperties> -->
 				</configuration>
 				<dependencies>
 					<!-- Need this for the ehcache logging -->
@@ -72,11 +72,6 @@
 						<version>1.2.16</version>
 					</dependency>
 
-					<dependency>
-						<groupId>org.nextprot</groupId>
-						<artifactId>nextprot-commons</artifactId>
-						<version>0.9.0-SNAPSHOT</version>
-					</dependency>
 
 				</dependencies>
 				<executions>
