--- a/web/pom.xml
+++ b/web/pom.xml
@@ -79,6 +79,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-etl-statements</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.oracle.jdbc</groupId>
 			<artifactId>ojdbc7</artifactId>
 			<version>12.1.0.2</version>
