--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -17,6 +17,13 @@ db.user.url=jdbc:postgresql://crick:5432/np_users
 db.user.username=postgres
 db.user.password=postgres
 
+#Database for statements
+db.statements.driver=oracle.jdbc.driver.OracleDriver
+db.statements.url=jdbc:oracle:thin:@fou:1526:SIBTEST3
+db.statements.username=nxbed
+db.statements.password=juventus
+
+
 db.user.maxPoolSize=1
 db.user.minPoolSize=1
 db.user.initialPoolSize=1
