--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -19,7 +19,7 @@ db.user.password=postgres
 
 #Database for statements
 db.statements.driver=oracle.jdbc.driver.OracleDriver
-db.statements.url=jdbc:oracle:thin:@fou:1526:SIBTEST3
+db.statements.url=jdbc:oracle:thin:@fou.isb-sib.ch:1526:SIBTEST3
 db.statements.username=nxbed
 db.statements.password=juventus
 
