--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=nextprot-api
-sonar.projectName=nextprot-api-snapshot
+sonar.projectKey=nextprot-api-bed
+sonar.projectName=nextprot api bed
 sonar.projectVersion=0.9.0-SNAPSHOT
 sonar.sources=commons/src, core/src, rdf/src, security/src, solr/src, user/src, web/src, etl-statement/src/, isoform-mapper/src
 #sonar.modules=commons, core, rdf, security, solr, user, web, etl-statement, isoform-mapper
