--- a/commons/src/main/resources/application-dev.properties
+++ b/commons/src/main/resources/application-dev.properties
@@ -18,11 +18,10 @@ db.user.username=postgres
 db.user.password=postgres
 
 #Database for statements
-db.statements.driver=oracle.jdbc.driver.OracleDriver
-db.statements.url=jdbc:oracle:thin:@fou.isb-sib.ch:1526:SIBTEST3
-db.statements.username=nxbed
-db.statements.password=juventus
-
+db.statements.driver=org.postgresql.Driver
+db.statements.url=jdbc:postgresql://crick:5432/nxflat
+db.statements.username=postgres
+db.statements.password=postgres
 
 db.user.maxPoolSize=1
 db.user.minPoolSize=1
