--- a/commons/src/main/resources/application-unit.properties
+++ b/commons/src/main/resources/application-unit.properties
@@ -30,7 +30,7 @@ github.doc.branch=develop
 
 pepx.url=undefined
 
-db.statements.driver=oracle.jdbc.driver.OracleDriver
-db.statements.url=jdbc:oracle:thin:@fou.isb-sib.ch:1526:SIBTEST3
-db.statements.username=nxbed
-db.statements.password=juventus
+db.statements.driver=org.postgresql.Driver
+db.statements.url=jdbc:postgresql://crick:5432/nxflat
+db.statements.username=postgres
+db.statements.password=postgres
