--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=nextprot-api-dev
 sonar.projectName=nextprot api dev
 sonar.projectVersion=0.9.0
-sonar.sources=commons/src, core/src, etl-statement/src/, isoform-mapper/src, rdf/src, security/src, solr/src, tasks/src, user/src, web/src
+sonar.sources=commons/src, core/src, rdf/src, security/src, solr/src, tasks/src, user/src, web/src
 sonar.language=java
 sonar.sourceEncoding=UTF-8
