--- a/web/pom.xml
+++ b/web/pom.xml
@@ -37,6 +37,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nextprot</groupId>
+			<artifactId>nextprot-api-tasks</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nextprot</groupId>
 			<artifactId>nextprot-api-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
