--- a/web/pom.xml
+++ b/web/pom.xml
@@ -114,7 +114,7 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.3.11</version>
+				<version>8.1.16.v20140903</version>
 				<configuration>
 					<!-- <jettyXml>src/etc/jetty-jmx.xml</jettyXml> -->
 					<!-- <scanIntervalSeconds>10</scanIntervalSeconds> -->
