--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		    <dependency>
 			<groupId>org.nextprot</groupId>
     			<artifactId>nextprot-commons</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>LATEST</version>
 		    </dependency>
 	
 		</dependencies>
